--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         alert(milkTeaName + " added to Cart");
 
        
-        window.location.href = "milkTea Home.html";
+        window.location.href = "index.html";
     }
 </script>
 
@@ -39,7 +39,7 @@
         <div class="wrapper">
         <nav>
             <ul>
-                <li><a href="milkTea Home.html">Home</a></li>
+                <li><a href="index.html">Home</a></li>
                 <li><a href="milkTea Menu.html">Menu</a></li>
                 <li><a href="Order_page.html">Cart</a></li>
                 <li><a href="Contact Us.html">Contact Us</a></li>
